// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Method component buildIOcomponent returns null if no widget tag 1`] = `
<WithStyles(WidgetGroupExpander)
  expanded={true}
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="-"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <pure(BugReport)
          nativeColor="red"
        />
      </div>
    </div>
    <WithStyles(Paper)
      elevation={4}
      style={
        Object {
          "backgroundColor": "#3B3B3B",
          "marginBottom": "2px",
          "marginTop": "2px",
          "paddingBottom": "2px",
          "paddingTop": "2px",
        }
      }
    >
      <div
        className="MethodDetails-div-1"
      >
        <WithStyles(Tooltip)
          title=""
        >
          <div>
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
            />
          </div>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        />
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(ButtonAction)
            clickAction={[Function]}
            disabled={false}
            text="Test"
          />
        </div>
      </div>
    </WithStyles(Paper)>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with default inputs 1`] = `
<WithStyles(WidgetGroupExpander)
  expanded={true}
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="1"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="two"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <WithStyles(Paper)
      elevation={4}
      style={
        Object {
          "backgroundColor": "#3B3B3B",
          "marginBottom": "2px",
          "marginTop": "2px",
          "paddingBottom": "2px",
          "paddingTop": "2px",
        }
      }
    >
      <div
        className="MethodDetails-div-1"
      >
        <WithStyles(Tooltip)
          title=""
        >
          <div>
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
            />
          </div>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        />
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(ButtonAction)
            clickAction={[Function]}
            disabled={false}
            text="Test"
          />
        </div>
      </div>
    </WithStyles(Paper)>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with empty inputs 1`] = `
<WithStyles(WidgetGroupExpander)
  expanded={true}
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="-"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="-"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <WithStyles(Paper)
      elevation={4}
      style={
        Object {
          "backgroundColor": "#3B3B3B",
          "marginBottom": "2px",
          "marginTop": "2px",
          "paddingBottom": "2px",
          "paddingTop": "2px",
        }
      }
    >
      <div
        className="MethodDetails-div-1"
      >
        <WithStyles(Tooltip)
          title=""
        >
          <div>
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
            />
          </div>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        />
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(ButtonAction)
            clickAction={[Function]}
            disabled={false}
            text="Test"
          />
        </div>
      </div>
    </WithStyles(Paper)>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with existing input values 1`] = `
<WithStyles(WidgetGroupExpander)
  expanded={true}
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="3"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="four"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <WithStyles(Paper)
      elevation={4}
      style={
        Object {
          "backgroundColor": "#3B3B3B",
          "marginBottom": "2px",
          "marginTop": "2px",
          "paddingBottom": "2px",
          "paddingTop": "2px",
        }
      }
    >
      <div
        className="MethodDetails-div-1"
      >
        <WithStyles(Tooltip)
          title=""
        >
          <div>
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
            />
          </div>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        />
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(ButtonAction)
            clickAction={[Function]}
            disabled={false}
            text="Test"
          />
        </div>
      </div>
    </WithStyles(Paper)>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with return value 1`] = `
<WithStyles(WidgetGroupExpander)
  expanded={true}
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="-"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <div>
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
      </div>
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second input
          :
           
        </WithStyles(Typography)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={true}
          Value="-"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <WithStyles(Paper)
      elevation={4}
      style={
        Object {
          "backgroundColor": "#3B3B3B",
          "marginBottom": "2px",
          "marginTop": "2px",
          "paddingBottom": "2px",
          "paddingTop": "2px",
        }
      }
    >
      <div
        className="MethodDetails-div-1"
      >
        <WithStyles(Tooltip)
          title=""
        >
          <div>
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
            />
          </div>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        />
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(ButtonAction)
            clickAction={[Function]}
            disabled={false}
            text="Test"
          />
        </div>
      </div>
    </WithStyles(Paper)>
    <div>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Last Return:
      </WithStyles(Typography)>
      <WithStyles(Divider) />
      <div
        className="MethodDetails-div-1"
        key="first"
      >
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First output
          :
           
        </WithStyles(Typography)>
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(WidgetLED)
            LEDState={true}
            colorBorder="#7986cb"
            colorCenter="#7986cb"
          />
        </div>
      </div>
      <div
        className="MethodDetails-div-1"
        key="second"
      >
        <WithTheme(AttributeAlarm)
          alarmSeverity={0}
        />
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second output
          :
           
        </WithStyles(Typography)>
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(WidgetTextUpdate)
            Text="done"
          />
        </div>
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;
